--- a/takahashi-lp/scss/_nav.scss
+++ b/takahashi-lp/scss/_nav.scss
@@ -95,8 +95,8 @@ height: 80px;
 border-radius: 40px;
 background: $col-sec;
 position: fixed;
-top: 0;
-right: 0;
+top: 8px;
+right: 8px;
 z-index: 2;
   &:hover{
   opacity: 0.8;
